# LogScope

./: Cargo.toml  README.md
samples/: mixed.jsonl
src/: analyzer.rs  cli.rs  config.rs  filter.rs  lib.rs  main.rs  model.rs  parser.rs  report.rs  tui.rs  utils.rs
src/report/: html.rs  json.rs  markdown.rs  mod.rs  sections.rs
src/tui/: app.rs  view.rs
tests/: advanced_analysis_cli.rs  analyze_cli.rs  analyzer_report.rs  config.rs  filter.rs  json_parser.rs  module_structure.rs  parser.rs  report_cli.rs  sample_files.rs  search_cli.rs  text_parser.rs
